Reconcile prose with the previous commit's actual code/state (post-workflow gap audit)
A follow-up adversarial audit of the previous commit's own claims found
what the project's own culture usually catches before it ships: the code
and numbers from that commit were correct, but four places in the
surrounding prose still described the pre-fix or pre-public state,
because the fix landed without a sweep of everywhere it was described.

- ProviderBootstrap.java's class Javadoc still said NAMED_GROUPS was
  public, directly contradicting the field's own Javadoc four lines below
  it (which correctly explains why it's private again). Fixed to describe
  both visibility changes accurately - which members are public, which
  isn't, and why.
- benchmarks/ai-inference-pqc/README.md described the same pre-fix state
  (NAMED_GROUPS widened to public, "no call site changed") - both no
  longer true. Fixed to match.
- WRITEUP.md's "Known limitations" still said the repository is private
  and blocking submission - it's been public for several commits.
  Corrected in place, crossed off rather than deleted, matching this
  project's own practice of showing the correction rather than just the
  corrected state.
- WRITEUP.md's limitations also still called the JDK21-vs-25 cross-baseline
  gap "undisclosed... not controlled for or checked" - the previous commit
  measured it directly (<0.5% delta across three benchmarks) and found it
  doesn't matter. Updated to state the actual finding instead of the
  now-stale open question.

Also fixed a smaller, already-flagged issue while touching this code:
PqcAiTlsClient printed a hardcoded "LOCAL PROTOTYPE TIMING (Mac laptop...)"
label unconditionally - including on the real Azure Cobalt 100 run that
produced this project's actual headline AI-workload numbers. Now reads
the platform from os.name/os.arch at runtime instead of asserting a
specific machine.

Full verification gate (./run before, ./run after, ./run-nativekem.sh,
mvn test) re-run 